Fixed retreiving of cost of shipping Fixed alignment for cart menu briefing of costs

--- a/styles/cart.css
+++ b/styles/cart.css
@@ -140,6 +140,7 @@ nav#cartSection{
     font-weight: bolder;
     flex: 2;
     order: 4;
+    text-align: right;
 }
 
 .cartItem .imageColumn{
